# veloce

./: .gitignore  README.md  readme.md
veloce-backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
veloce-backend/app/: __init__.py  auth_tokens.py  config.py  db.py  dependencies.py  main.py  passwords.py
veloce-backend/app/models/: __init__.py  ai_analysis.py  assignment.py  brief.py  estimate_override.py  note.py  stage_event.py  user.py
veloce-backend/app/routers/: auth.py  briefs.py  users.py  webhooks.py
veloce-backend/app/schemas/: auth.py  briefs.py  intake_response.py
veloce-backend/app/services/: brief_pipeline.py  openai_analyze.py
veloce-backend/app/util/: cursor.py  serialize.py  timefmt.py
veloce-backend/scripts/: seed_users.py
veloce-frontend/: README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs
veloce-frontend/scripts/: create-indexes.ts  seed-users.ts  test-webhook-intake.ts
veloce-frontend/scripts/fixtures/: webhook-intake-payload.json
veloce-frontend/src/app/: layout.tsx  page.tsx
veloce-frontend/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
veloce-frontend/src/components/: analytics-dashboard.tsx  auth-bar.tsx  brief-detail-view.tsx  briefs-list.tsx  dashboard-nav.tsx  dashboard-shell.tsx  intake-form.tsx  pipeline-board.tsx  pipeline-skeleton.tsx  pipeline-welcome.tsx  providers.tsx  role-switcher.tsx  site-header.tsx
veloce-frontend/src/lib/: api.ts  auth-context.tsx  veloce-store.tsx  workspace-sse.ts
veloce-frontend/src/types/: veloce.ts
(+39 files in other folders)
